# sanic-to-json

./: .gitignore  .travis.yml  CHANGELOG.md  Internal ACP API.postman_collection.json  LICENSE  Logging API.postman_collection.json  README.md  Test API.postman_collection.json  Test Collection .postman_collection.json  Test_collection.postman_collection.json  Testing uploaded postman_collection.json  app.py  blueprint_1.py  blueprint_2.py  build_notes.md  data_file.json  dd.py  dfd.py  generate_json.py  postman_collection.json  pyproject.toml  python_to_postman.py  read_routes.py  sanic-to-json.py  sanic_to_json.py  scratch2.json  tox.ini
.vscode2/: settings.json
Examples/: app.py  blueprint_1.py  blueprint_2.py  example_script.py
examples/: blueprint_1.py  blueprint_2.py  example_script.py  test.json
examples/flask/: app.py
sanic_to_json/: INI_helpers.py  __init__.py  app_helpers.py  blueprint_helpers.py  generate_json.py  sanic_to_json.py  test.py
tests/: pytest.ini  test_INI.py  test_app_routes.py  test_blueprints.py  test_json.py  test_python_to_postman.py  test_sanic_to_json.py  test_schema.py
